fixing spacing 2

--- a/dcpython/app/static/css/dcpython.css
+++ b/dcpython/app/static/css/dcpython.css
@@ -1,5 +1,5 @@
 html, body{
-   height:100%;
+    height:100%;
 }
 
 .navbar .nav > li > a {
@@ -7,7 +7,7 @@ html, body{
 }
 
 .navbar .nav > li > a:hover {
-    color:gray;
+    color:lightgray;
 }
 
 .navbar-inverse .navbar-brand {
